--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -4,45 +4,48 @@
 html {
 	box-sizing: border-box;
 }
+
 body {
 	margin: 0;
+	padding: .5em;
+	font-family: Arial, Helvetica, sans-serif;
+	line-height: 20px;
 }
-
 
 /* Preview each of these suggested resets before beginning your project styling */
 
 img {
 	max-width: 100%;
 	height: auto;
-	vertical-align: bottom;
-} 
+	vertical-align: auto;
+}
 
 ul, ol, dl {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-} 
-
-li > ul , li > ol {
+}
+/*
+li > ul, li > ol {
 	padding-left: 2.5em;
-} 
+} */
 
 input, button {
 	margin: 0;
 	font: inherit;
-} 
+}
 
-fieldset {
-	
+/* fieldset {
+	display: flex;
 	margin: 0;
 	padding: 0;
 	border: none;
-} 
-
+} */
+/*
 legend {
 	padding: 0;
 	border: none;
-}
+} */
 
 
 /* These will make "User agent stylesheet" values (Chrome) available when needed, using classes */
@@ -81,7 +84,4 @@ legend.legend {
 	border-style: none;
 	border-color: initial;
 	border-image: initial;
-}
-button{
-	cursor: pointer;
 }
